// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preferences: URLs of legacy extensions > given extension with both custom preference tabs and content for the default tab > when navigating to specific custom preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-514aaa1f-99b8-4a92-acd7-922f288931cd"
            id="top-tab-514aaa1f-99b8-4a92-acd7-922f288931cd"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-514aaa1f-99b8-4a92-acd7-922f288931cd"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-514aaa1f-99b8-4a92-acd7-922f288931cd"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-cf871270-5b2c-4858-a582-d2fdcf0365c8"
            id="top-tab-cf871270-5b2c-4858-a582-d2fdcf0365c8"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-cf871270-5b2c-4858-a582-d2fdcf0365c8"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-cf871270-5b2c-4858-a582-d2fdcf0365c8"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-5a944cb4-5012-486f-81b8-4d59f8a1cc7b"
            id="top-tab-5a944cb4-5012-486f-81b8-4d59f8a1cc7b"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Some Preference Tab Id
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-5a944cb4-5012-486f-81b8-4d59f8a1cc7b"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-5a944cb4-5012-486f-81b8-4d59f8a1cc7b"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
                id="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  Some title
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference-in-custom-tab"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-9"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-9"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-9"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-9"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with both custom preference tabs and content for the default tab > when navigating to unspecified custom preferences tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-dfcfeb04-e745-47b6-941e-ab24f264587c"
            id="top-tab-dfcfeb04-e745-47b6-941e-ab24f264587c"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-dfcfeb04-e745-47b6-941e-ab24f264587c"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-dfcfeb04-e745-47b6-941e-ab24f264587c"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-3a291c1e-d85c-45aa-af70-fa706abea051"
            id="top-tab-3a291c1e-d85c-45aa-af70-fa706abea051"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-3a291c1e-d85c-45aa-af70-fa706abea051"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-3a291c1e-d85c-45aa-af70-fa706abea051"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-166d8c1e-754a-4a5f-8a53-9aa909a0a4cb"
            id="top-tab-166d8c1e-754a-4a5f-8a53-9aa909a0a4cb"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Some Extension
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-166d8c1e-754a-4a5f-8a53-9aa909a0a4cb"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-166d8c1e-754a-4a5f-8a53-9aa909a0a4cb"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id-in-default-tab"
                >
                  <section
                    class="small"
                    id="some-preference-item-id-in-default-tab"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title-in-default-tab
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference-in-default-tab"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-12"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-12"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-12"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-12"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences and a custom preference tab > when navigating to specific custom preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-ad3153ee-f4e4-45dd-9b58-e8e175073207"
            id="top-tab-ad3153ee-f4e4-45dd-9b58-e8e175073207"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-ad3153ee-f4e4-45dd-9b58-e8e175073207"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-ad3153ee-f4e4-45dd-9b58-e8e175073207"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-a6a7a904-6056-4d54-bc71-e7409d9fbdd3"
            id="top-tab-a6a7a904-6056-4d54-bc71-e7409d9fbdd3"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-a6a7a904-6056-4d54-bc71-e7409d9fbdd3"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-a6a7a904-6056-4d54-bc71-e7409d9fbdd3"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-27414ac3-786b-42c3-ae4d-e932c1fa30cc"
            id="top-tab-27414ac3-786b-42c3-ae4d-e932c1fa30cc"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Some Preference Tab Id
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-27414ac3-786b-42c3-ae4d-e932c1fa30cc"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-27414ac3-786b-42c3-ae4d-e932c1fa30cc"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
                id="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  Some title
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-0"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-0"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences and a custom preference tab > when navigating to unspecified custom preferences tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-01613a11-e6a6-4a0a-86f6-cbb19d228f37"
            id="top-tab-01613a11-e6a6-4a0a-86f6-cbb19d228f37"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-01613a11-e6a6-4a0a-86f6-cbb19d228f37"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-01613a11-e6a6-4a0a-86f6-cbb19d228f37"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-4fb092f0-18cb-4e86-87b3-6767711ca2e0"
            id="top-tab-4fb092f0-18cb-4e86-87b3-6767711ca2e0"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-4fb092f0-18cb-4e86-87b3-6767711ca2e0"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-4fb092f0-18cb-4e86-87b3-6767711ca2e0"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-21c2959d-3b20-47a0-821c-8743c21862ca"
            id="top-tab-21c2959d-3b20-47a0-821c-8743c21862ca"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Some Extension
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-21c2959d-3b20-47a0-821c-8743c21862ca"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-21c2959d-3b20-47a0-821c-8743c21862ca"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-3"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-3"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-3"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-3"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences but without a custom preference tab > when navigating to the default preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-3b2dc60a-19c7-4c7a-8305-6bd8889eda50"
            id="top-tab-3b2dc60a-19c7-4c7a-8305-6bd8889eda50"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-3b2dc60a-19c7-4c7a-8305-6bd8889eda50"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-3b2dc60a-19c7-4c7a-8305-6bd8889eda50"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-13e1ae9f-158c-4076-af74-ca2b638c5b1f"
            id="top-tab-13e1ae9f-158c-4076-af74-ca2b638c5b1f"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-13e1ae9f-158c-4076-af74-ca2b638c5b1f"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-13e1ae9f-158c-4076-af74-ca2b638c5b1f"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-bd69a9d7-87db-47c9-9e25-995863f98c35"
            id="top-tab-bd69a9d7-87db-47c9-9e25-995863f98c35"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Some Extension
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-bd69a9d7-87db-47c9-9e25-995863f98c35"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-bd69a9d7-87db-47c9-9e25-995863f98c35"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="true"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-6"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-6"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;
